--- a/src/pages/scales-list/scales-list.html
+++ b/src/pages/scales-list/scales-list.html
@@ -4,6 +4,10 @@
           <button ion-button menuToggle icon-only><ion-icon name="menu"></ion-icon></button>
       </ion-buttons>
       <ion-title>Gammes</ion-title>
+      <ion-buttons end>
+        <button ion-button outline="true">Notes</button>
+        <button ion-button outline="true" color="dark">Gammes</button>
+      </ion-buttons>
   </ion-navbar>
 </ion-header>
 
