--- a/src/pages/notes-list/notes-list.html
+++ b/src/pages/notes-list/notes-list.html
@@ -5,14 +5,13 @@
       </ion-buttons>
       <ion-title>Notes</ion-title>
       <ion-buttons end>
-          <button (click)="showPopup($event, 'filters')" ion-button icon-only><ion-icon name="options"></ion-icon></button>
-          <button (click)="showPopup($event, 'options')" ion-button icon-only><ion-icon name="settings"></ion-icon></button>
+          <button (click)="showPopup($event)" ion-button icon-only><ion-icon name="options"></ion-icon></button>
       </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
     <div class="notes">
-        <note-card *ngFor="let note of notes" [note]="note.name" [direction]="note.direction"></note-card>
+        <note-card *ngFor="let note of notes" [note]="note"></note-card>
     </div>
 </ion-content>
