Adding the notes list filters

--- a/src/pages/notes-list/notes-list.html
+++ b/src/pages/notes-list/notes-list.html
@@ -5,6 +5,7 @@
       </ion-buttons>
       <ion-title>Notes</ion-title>
       <ion-buttons end>
+          <button (click)="showModal($event)" ion-button outline>Filtres</button>
           <button (click)="showPopup($event)" ion-button icon-only><ion-icon name="options"></ion-icon></button>
       </ion-buttons>
   </ion-navbar>
