Adding another note in the musical-note component + better SASS styling

--- a/src/modals/notes-filters/notes-filters.html
+++ b/src/modals/notes-filters/notes-filters.html
@@ -15,7 +15,7 @@
         <ion-item-divider>Inclure</ion-item-divider>
         <ion-item>
             <ion-label>Bémol</ion-label>
-            <ion-checkbox [(ngModel)]="config.notes.list_flat" (click)="onChanged($event)"></ion-checkbox>
+            <ion-checkbox [(ngModel)]="config.notes.list_flat" (click)="onChanged()"></ion-checkbox>
         </ion-item>
         <ion-item>
             <ion-label>Dièse</ion-label>
