--- a/src/pages/notes-detail/notes-detail.html
+++ b/src/pages/notes-detail/notes-detail.html
@@ -15,7 +15,7 @@
 
     <ion-card id="position_{{i}}" *ngFor="let p of positions; let i = index;">
         <ion-card-content>
-            <musical-note [note]="note"></musical-note>
+            <musical-note [note]="note" [singlePosition]="p"></musical-note>
         </ion-card-content>
         <div class="buttons">
             <button ion-button icon-left (click)="favorite(i)">
