Fixing notes quiz

--- a/src/pages/notes-detail/notes-detail.html
+++ b/src/pages/notes-detail/notes-detail.html
@@ -13,7 +13,7 @@
         <ion-segment-button *ngFor="let clef of clefs" [value]="clef.letter.name" (ionSelect)="onFilterChanged($event)">Clef de <note-name [note]="clef" [french]="config.general.letter_in_french"></note-name></ion-segment-button>
     </ion-segment>
 
-    <ion-card id="position_{{i}}" *ngFor="let p of positions; let i = index;">
+    <ion-card id="position_{{p.position}}" *ngFor="let p of positions; let i = index;">
         <ion-card-content>
             <musical-note [note]="note" [singlePosition]="p.position" [clef]="currentClef"></musical-note>
         </ion-card-content>
