--- a/src/modals/notes-quiz/notes-quiz.html
+++ b/src/modals/notes-quiz/notes-quiz.html
@@ -5,7 +5,7 @@
         </ion-title>
         <ion-buttons start>
             <button ion-button (click)="close()">
-                <ion-icon name="close" showWhen="android,windows"></ion-icon>
+                <ion-icon name="arrow-back" showWhen="android,windows"></ion-icon>
             </button>
         </ion-buttons>
     </ion-toolbar>
@@ -14,10 +14,18 @@
 <ion-content padding>
 
     <ion-list radio-group>
+        <ion-item-divider>Prendre les clefs suivantes</ion-item-divider>
+        <ion-item *ngFor="let clef of clefs">
+            <ion-label>Clef de <note-name [note]="clef" [french]="config.general.letter_in_french"></note-name></ion-label>
+            <ion-checkbox [(ngModel)]="config.notes.quiz_clefs[clef.letter.name]" (click)="onFilterChanged($event)"></ion-checkbox>
+        </ion-item>
+    </ion-list>
+
+    <ion-list radio-group>
         <ion-item-divider>Favoris</ion-item-divider>
         <ion-item>
             <ion-label>Seulement utiliser ces notes</ion-label>
-            <ion-toggle value="exclude" [(ngModel)]="config.NotesFilters.quiz_use_favorites" [disabled]="this.favorites.all('notes').length == 0" (ionChange)="onFilterChanged($event)"></ion-toggle>
+            <ion-toggle value="exclude" [(ngModel)]="config.notes.quiz_favorites" [disabled]="this.favorites.all('notes').length == 0" (ionChange)="onFilterChanged($event)"></ion-toggle>
         </ion-item>
     </ion-list>
 
@@ -25,7 +33,7 @@
         <ion-item-divider>Bémol</ion-item-divider>
         <ion-item>
             <ion-label>Inclure</ion-label>
-            <ion-toggle [(ngModel)]="config.NotesFilters.quiz_use_flat" (ionChange)="onFilterChanged()"></ion-toggle>
+            <ion-toggle [(ngModel)]="config.notes.quiz_flat" (ionChange)="onFilterChanged()"></ion-toggle>
         </ion-item>
     </ion-list>
 
@@ -33,7 +41,7 @@
         <ion-item-divider>Dièse</ion-item-divider>
         <ion-item>
             <ion-label>Inclure</ion-label>
-            <ion-toggle [(ngModel)]="config.NotesFilters.quiz_use_sharp" (ionChange)="onFilterChanged()"></ion-toggle>
+            <ion-toggle [(ngModel)]="config.notes.quiz_sharp" (ionChange)="onFilterChanged()"></ion-toggle>
         </ion-item>
     </ion-list>
 
