--- a/src/pages/chords-quiz/chords-quiz.html
+++ b/src/pages/chords-quiz/chords-quiz.html
@@ -25,7 +25,7 @@
     </div>
 
     <div *ngIf="isPlaying && !isDone">
-        <h1>Reproduire cet accord <chord-name [note]="current_chord.note" [french]="config.ChordsOptions.show_note_in_french" [type]="current_chord.type"></chord-name></h1>
+        <h1>Reproduire cet accord <chord-name [note]="current_chord.note" [french]="config.ChordsOptions.show_note_in_french" [form]="current_chord.type"></chord-name></h1>
         <chord-position (onMarkerToggled)="verifyAnswer($event)" [interactive]="isWaiting" [(startPosition)]="start" [position]="position"></chord-position>
         <div class="buttons">
             <button *ngIf="isWaiting" ion-button [disabled]="start <= 1" (click)="moveFret(-1)"><ion-icon name="arrow-up"></ion-icon></button>
