--- a/src/pages/chords-list/chords-list.html
+++ b/src/pages/chords-list/chords-list.html
@@ -5,7 +5,7 @@
       </ion-buttons>
       <ion-title>Accords</ion-title>
       <ion-buttons end>
-          <button (click)="showPopup($event)" ion-button outline="true">{{config.ChordsFilters.list_chord_type}}</button>
+          <button (click)="showModal($event)" ion-button outline>Filtres</button>
           <button (click)="showPopup($event)" ion-button icon-only><ion-icon name="options"></ion-icon></button>
       </ion-buttons>
   </ion-navbar>
