--- a/src/pages/chords-favorites/chords-favorites.html
+++ b/src/pages/chords-favorites/chords-favorites.html
@@ -5,17 +5,17 @@
       </ion-buttons>
       <ion-title>Favoris</ion-title>
       <ion-buttons end>
-          <button (click)="showPopup($event, 'options')" ion-button icon-only><ion-icon name="settings"></ion-icon></button>
+          <button (click)="showPopup($event)" ion-button icon-only><ion-icon name="options"></ion-icon></button>
       </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-    <div class="chords" *ngIf="favorites.all().length > 0">
-        <chord-card *ngFor="let favorite of favorites.all()" [chord]="favorite.note" (onDetailClicked)="showDetail($event)"></chord-card>
+    <div class="chords" *ngIf="chords.length > 0">
+        <chord-card *ngFor="let favorite of chords" [chord]="favorite" (onDetailClicked)="showDetail($event)"></chord-card>
     </div>
 
-    <div class="label-container" *ngIf="favorites.all().length == 0">
-        <p>Aucun favori!</p> 
+    <div class="label-container" *ngIf="chords.length == 0">
+        <p>Aucun accord n'est dans les favoris!</p> 
     </div>
 </ion-content>
