--- a/src/pages/notes-quiz/notes-quiz.html
+++ b/src/pages/notes-quiz/notes-quiz.html
@@ -28,7 +28,7 @@
         <h1>Quelle est cette note ?</h1>
         <musical-note [clef]="current_question.clef.letter.name" [singlePosition]="current_question.position" [note]="current_question.note"></musical-note>
         <div class="buttons" *ngIf="isWaiting">
-            <button *ngFor="let answer of answers; let i = index" ion-button (click)="tryAnswer(i)" [disabled]="wrongAnswers.indexOf(i) >= 0"><note-name [note]="answer" [french]="config.ChordsOptions.show_note_in_french"></note-name></button>
+            <button *ngFor="let answer of answers; let i = index" ion-button (click)="tryAnswer(i)" [disabled]="wrongAnswers.indexOf(i) >= 0"><note-name [note]="answer" [french]="config.general.letter_in_french"></note-name></button>
         </div>
         <div *ngIf="!isWaiting && isLastQuestion()">
             <button ion-button (click)="pickChord()">Voir le résultat</button>
