--- a/src/pages/notes-favorites/notes-favorites.html
+++ b/src/pages/notes-favorites/notes-favorites.html
@@ -3,7 +3,7 @@
       <ion-buttons start>
           <button ion-button menuToggle icon-only><ion-icon name="menu"></ion-icon></button>
       </ion-buttons>
-      <ion-title>Favoris</ion-title>
+      <ion-title>{{ 'Favorites' | translate }}</ion-title>
       <ion-buttons end>
           <button (click)="showPopup($event)" ion-button icon-only><ion-icon name="options"></ion-icon></button>
       </ion-buttons>
@@ -16,6 +16,7 @@
     </div>
 
     <div class="label-container" *ngIf="notes.length == 0">
-        <p>Aucune note n'est pas les favoris!</p> 
+        <h1>{{ 'No favorites' | translate }}</h1>
+        <p>{{ 'Notes you mark as favorite will show up here' | translate }}</p> 
     </div>
 </ion-content>
