--- a/src/pages/notes-tabs/notes-tabs.html
+++ b/src/pages/notes-tabs/notes-tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs color="primary" [selectedIndex]="mySelectedIndex">
-    <ion-tab [root]="tabListRoot" tabTitle="Liste" tabIcon="musical-note"></ion-tab>
-    <ion-tab [root]="tabFavoritesRoot" tabTitle="Favoris" tabIcon="star"></ion-tab>
+    <ion-tab [root]="tabListRoot" tabTitle="('Liste' | translate)" tabIcon="musical-note"></ion-tab>
+    <ion-tab [root]="tabFavoritesRoot" tabTitle="('Favorites' | translate)" tabIcon="star"></ion-tab>
 </ion-tabs>
