--- a/src/pages/notes-detail/notes-detail.html
+++ b/src/pages/notes-detail/notes-detail.html
@@ -10,7 +10,7 @@
 <ion-content>
     
     <ion-segment [ngModel]="currentClef">
-        <ion-segment-button *ngFor="let clef of clefs" [value]="clef.letter.name" (ionSelect)="onFilterChanged($event)">Clef de <note-name [note]="clef" [french]="config.general.letter_in_french"></note-name></ion-segment-button>
+        <ion-segment-button *ngFor="let clef of clefs" [value]="clef.letter.name" (ionSelect)="onFilterChanged($event)">{{ 'clef prefix' | translate }}<note-name [note]="clef" [french]="config.general.letter_in_french"></note-name>{{ 'clef suffix' | translate }}</ion-segment-button>
     </ion-segment>
 
     <ion-card id="position_{{p.position}}" *ngFor="let p of positions; let i = index;">
@@ -18,8 +18,8 @@
             <musical-note [note]="note" [singlePosition]="p.position" [clef]="currentClef"></musical-note>
         </ion-card-content>
         <div class="buttons">
-            <button *ngIf="!p.isFavorited" ion-button icon-left (click)="favorite(p.position)"><ion-icon name="star" item-left></ion-icon> Ajouter</button>
-            <button *ngIf="p.isFavorited" ion-button icon-left (click)="favorite(p.position)"><ion-icon name="star" item-left></ion-icon> Remove</button>
+            <button *ngIf="!p.isFavorited" ion-button icon-left (click)="favorite(p.position)"><ion-icon name="star" item-left></ion-icon>{{ 'Add' | translate }}</button>
+            <button *ngIf="p.isFavorited" ion-button icon-left (click)="favorite(p.position)"><ion-icon name="star" item-left></ion-icon>{{ 'Remove' | translate }}</button>
         </div>
     </ion-card>
 
